# Vent-queue

./: database.py  main.py  models.py  pyproject.toml  websocket_manager.py
routes/: customer.py  owner.py
vent-queue-frontend/: package-lock.json  package.json
vent-queue-frontend/src/: App.js
vent-queue-frontend/src/api/: queue.js
vent-queue-frontend/src/pages/: CustomerPage.jsx  OwnerDashboard.jsx
