[project]
name = "vent-queue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
